[gd_scene load_steps=9 format=3 uid="uid://bqremtifv3lo7"]

[ext_resource type="Script" uid="uid://cwn5bfe4fwryv" path="res://menu/upgrades/upgrades.gd" id="1_1d55w"]
[ext_resource type="Script" uid="uid://jkvp1vn81why" path="res://resources/upgrades/upgrade_resorce.gd" id="2_itraj"]
[ext_resource type="PackedScene" uid="uid://1kt3777oxrdh" path="res://menu/upgrades/upgrade_card.tscn" id="2_sb1vk"]
[ext_resource type="Resource" uid="uid://tripvghcai08" path="res://resources/upgrades/attack_speed.tres" id="3_d1iji"]
[ext_resource type="Resource" uid="uid://dg2trjo6w3kay" path="res://resources/upgrades/critical_damage.tres" id="4_dxu1w"]
[ext_resource type="Resource" uid="uid://qidhcbph8pce" path="res://resources/upgrades/damage.tres" id="5_o2sx4"]
[ext_resource type="Resource" uid="uid://g1pqhycpc8mc" path="res://resources/upgrades/health.tres" id="6_vhp8u"]
[ext_resource type="Resource" uid="uid://f0r7upjlgjxq" path="res://resources/upgrades/speed.tres" id="7_eq1ag"]

[node name="UpgradesSelectionMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1d55w")
upgrades_resources = Array[ExtResource("2_itraj")]([ExtResource("3_d1iji"), ExtResource("4_dxu1w"), ExtResource("5_o2sx4"), ExtResource("6_vhp8u"), ExtResource("7_eq1ag")])

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardsContainer" type="VFlowContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
alignment = 1

[node name="UpgradeCard" parent="CenterContainer/CardsContainer" instance=ExtResource("2_sb1vk")]
layout_mode = 2

[node name="UpgradeCard2" parent="CenterContainer/CardsContainer" instance=ExtResource("2_sb1vk")]
layout_mode = 2

[node name="UpgradeCard3" parent="CenterContainer/CardsContainer" instance=ExtResource("2_sb1vk")]
layout_mode = 2
